src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AM_Migration_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Accounts that we want to investigate and/or move forward with migration to Inform</description>
        <label>AM Migration Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountURL__c</fullName>
        <formula>LEFT( $Api.Partner_Server_URL_230 , FIND(&apos;services/Soap/c/23.0&apos;, $Api.Enterprise_Server_URL_230) -1) &amp;  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_At_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a sales and support tracking field to indicate a particular account&apos;s opportunity or general status is at risk.</description>
        <inlineHelpText>This is a tracking field to indicate a particular account&apos;s opportunity or general status is at risk.</inlineHelpText>
        <label>Account At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>xAccount Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Long_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Long ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Utilized on Zuercher account page layouts only</description>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsIkNr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Purpose__c</fullName>
        <inlineHelpText>General description of what the company does.</inlineHelpText>
        <label>xAccount Purpose</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Score_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Score Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Score_Director_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Score - Director Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Score_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Score Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Score__c</fullName>
        <description>Calculated by Apex trigger: AccountScoring</description>
        <inlineHelpText>Generated score based on all account scoring fields within this section.</inlineHelpText>
        <label>Account Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Scoring_Comments__c</fullName>
        <label>Account Scoring Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Forecasted</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Stable</fullName>
                </value>
                <value>
                    <fullName>Troubled</fullName>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                    <isActive>false</isActive>
                    <label>At Risk</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actions_Taken_Required__c</fullName>
        <description>Tracking field for Sales and Support to notate actions taken or required with the Account/Opportunity(s)</description>
        <inlineHelpText>Tracking field for Sales and Support to notate actions taken or required with the Account/Opportunity(s)</inlineHelpText>
        <label>Actions Taken/Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Active_Client_Product_Families__c</fullName>
        <description>Shows a consolidated list of the activate service contract product families associated with this account</description>
        <label>Active Client Product Families</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active_Contract_Product_Groups__c</fullName>
        <description>Shows a consolidated list of the activate service contract product groups associated with this account</description>
        <label>Active Contract Product Groups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active_Service_Contract_Value_Rollup__c</fullName>
        <label>Active Service Contract Value Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Open_Opp_Value_RollUp__c</fullName>
        <description>Rollup summary field for all open opps on an account less than the next two years close date</description>
        <label>Actual Open Opp Value RollUp</label>
        <summarizedField>Opportunity.Actual_Opportunity_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>lessOrEqual</operation>
            <value>1/1/2020</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Admin_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admin Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advertise_Relationship__c</fullName>
        <label>Advertise Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agency_Facebook_Address__c</fullName>
        <label>Agency Facebook Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Agreement_Effective_Date__c</fullName>
        <label>Agreement Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Expiration__c</fullName>
        <label>Agreement Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Location__c</fullName>
        <label>Agreement Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <label>Agreement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Re-Sale Signed</fullName>
                </value>
                <value>
                    <fullName>OEM Signed</fullName>
                </value>
                <value>
                    <fullName>Teaming Agreement</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_Served_Sq_Miles__c</fullName>
        <label>Area Served (Sq. Miles)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assets_Audited_Date__c</fullName>
        <label>Assets Audited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_BA_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assigned CAD TriTech Business Analyst for this account</inlineHelpText>
        <label>Assigned CAD BA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_BA_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assigned Mobile TriTech Business Analyst for this account</inlineHelpText>
        <label>Assigned Mobile BA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_BA_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assigned RMS TriTech Business Analyst for this account</inlineHelpText>
        <label>Assigned RMS BA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_PM_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Additional assigned TriTech Project Manager for this account</inlineHelpText>
        <label>Assigned PM #2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_PM_Email__c</fullName>
        <formula>Assigned_PM__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned PM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assigned TriTech Project Manager for this account</inlineHelpText>
        <label>Assigned PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Inmate_Daily_Population__c</fullName>
        <inlineHelpText>Inmate daily population</inlineHelpText>
        <label>Average Inmate Daily Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDS_Discovery__c</fullName>
        <label>BDS Discovery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bad_Debt_Indicator__c</fullName>
        <formula>IF( Bad_Debt_WMP__c  &lt;&gt; null, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;BAD DEBT&quot;), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;GOOD DEBT&quot;))</formula>
        <label>Accounting Notes Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Debt_WMP__c</fullName>
        <label>Accounting Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Installed_Year__c</fullName>
        <label>Billing Installed Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Vendor__c</fullName>
        <label>Billing Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911 EMS Software, LLC</fullName>
                </value>
                <value>
                    <fullName>911-Inc.</fullName>
                </value>
                <value>
                    <fullName>ACS-Firehouse</fullName>
                </value>
                <value>
                    <fullName>ADSI</fullName>
                </value>
                <value>
                    <fullName>AeroMed Software</fullName>
                </value>
                <value>
                    <fullName>Allegheny R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Alpine Software</fullName>
                </value>
                <value>
                    <fullName>AmbuPro</fullName>
                </value>
                <value>
                    <fullName>AMCAD</fullName>
                </value>
                <value>
                    <fullName>Application Data Systems Inc. (ADSi)</fullName>
                </value>
                <value>
                    <fullName>Archonix</fullName>
                </value>
                <value>
                    <fullName>Astra</fullName>
                </value>
                <value>
                    <fullName>Bighorn Systems</fullName>
                </value>
                <value>
                    <fullName>BIO-Key</fullName>
                </value>
                <value>
                    <fullName>Bradshaw Consulting</fullName>
                </value>
                <value>
                    <fullName>CallWorx</fullName>
                </value>
                <value>
                    <fullName>Cassidian</fullName>
                </value>
                <value>
                    <fullName>CIS Systems</fullName>
                </value>
                <value>
                    <fullName>Code 3 Software</fullName>
                </value>
                <value>
                    <fullName>Code Red</fullName>
                </value>
                <value>
                    <fullName>Cody</fullName>
                </value>
                <value>
                    <fullName>Commerx Corporation</fullName>
                </value>
                <value>
                    <fullName>ComnetiX</fullName>
                </value>
                <value>
                    <fullName>Computer Investment Advice, Inc.</fullName>
                </value>
                <value>
                    <fullName>CORE 911</fullName>
                </value>
                <value>
                    <fullName>Corporate Technologies, LLC</fullName>
                </value>
                <value>
                    <fullName>Crime Gog Technologies</fullName>
                </value>
                <value>
                    <fullName>CRIMES</fullName>
                </value>
                <value>
                    <fullName>CrimeStar</fullName>
                </value>
                <value>
                    <fullName>CR Management, Inc.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bomgar_Approved_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check only if the Client has approved the use of Bomgar to connect to their system.</inlineHelpText>
        <label>Bomgar Approved Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAD_BA_Email__c</fullName>
        <label>CAD BA Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CAD_Dispatcher_Call_Taker_Seats__c</fullName>
        <description>This field captures the number of PRODUCTION CAD positions for this specific agency.</description>
        <inlineHelpText>This field captures the number of PRODUCTION CAD positions for this specific agency.</inlineHelpText>
        <label>CAD Dispatcher/Call Taker Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAD_Go_Live_Date__c</fullName>
        <inlineHelpText>TriTech Client CAD Go Live date</inlineHelpText>
        <label>CAD Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CAD_Installed_Year__c</fullName>
        <label>CAD Installed Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAD_PSAP_Type__c</fullName>
        <label>CAD PSAP Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAD_Parent_Fire_EMS_Users__c</fullName>
        <label>CAD Parent Fire EMS Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAD_Parent_Sworn_Officer_Band__c</fullName>
        <label>CAD Parent Sworn Officer Band</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-9</fullName>
                </value>
                <value>
                    <fullName>10-99</fullName>
                </value>
                <value>
                    <fullName>100-249</fullName>
                </value>
                <value>
                    <fullName>250-999</fullName>
                </value>
                <value>
                    <fullName>1000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAD_Parent_Total_Sworn_Officers__c</fullName>
        <label>CAD Parent Total Sworn Officers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAD_Support_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAD Support Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsIeqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAD_Vendor__c</fullName>
        <label>CAD Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911 EMS Software, LLC</fullName>
                </value>
                <value>
                    <fullName>911-Inc.</fullName>
                </value>
                <value>
                    <fullName>ACS-Firehouse</fullName>
                </value>
                <value>
                    <fullName>ADSI</fullName>
                </value>
                <value>
                    <fullName>AeroMed Software</fullName>
                </value>
                <value>
                    <fullName>Alert Public Safety Solutions (APSS)</fullName>
                </value>
                <value>
                    <fullName>Allegheny R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Alpine Software</fullName>
                </value>
                <value>
                    <fullName>AmbuPro</fullName>
                </value>
                <value>
                    <fullName>AMCAD</fullName>
                </value>
                <value>
                    <fullName>AngelTrack</fullName>
                </value>
                <value>
                    <fullName>Application Data Systems Inc. (ADSi)</fullName>
                </value>
                <value>
                    <fullName>Archonix</fullName>
                </value>
                <value>
                    <fullName>ARMS</fullName>
                </value>
                <value>
                    <fullName>Astra</fullName>
                </value>
                <value>
                    <fullName>Bighorn Systems</fullName>
                </value>
                <value>
                    <fullName>BIO-Key</fullName>
                </value>
                <value>
                    <fullName>Blue Diamond</fullName>
                </value>
                <value>
                    <fullName>Bradshaw Consulting</fullName>
                </value>
                <value>
                    <fullName>CallWorx</fullName>
                </value>
                <value>
                    <fullName>Cardinal/CAD911</fullName>
                    <label>Cardinal</label>
                </value>
                <value>
                    <fullName>Cassidian</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>CIS Systems</fullName>
                </value>
                <value>
                    <fullName>Code 3 Software</fullName>
                </value>
                <value>
                    <fullName>Code Red</fullName>
                </value>
                <value>
                    <fullName>Cody</fullName>
                </value>
                <value>
                    <fullName>Commerx Corporation</fullName>
                </value>
                <value>
                    <fullName>ComnetiX</fullName>
                </value>
                <value>
                    <fullName>Computer Arts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Volume_Annual__c</fullName>
        <inlineHelpText>Annual calls received, not dispatched</inlineHelpText>
        <label>Annual Calls for Service Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clearinghouse_Vendor__c</fullName>
        <label>Clearinghouse Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Availity</fullName>
                </value>
                <value>
                    <fullName>Emdeon</fullName>
                </value>
                <value>
                    <fullName>No Clearinghouse</fullName>
                </value>
                <value>
                    <fullName>Office Ally</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>TriZetto</fullName>
                </value>
                <value>
                    <fullName>ZirMed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Relations_Contact_Goal__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Wellness Check Contact Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Tiburon__c</fullName>
        <label>Client - Tiburon</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TotalCommand</fullName>
                </value>
                <value>
                    <fullName>Dispatch Now</fullName>
                </value>
                <value>
                    <fullName>Total Enforcement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Zuercher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client - Zuercher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracking checkbox for clients of TriTech, any division</description>
        <label>Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comm_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comm Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This is a tracking field to notate general at risk comments with the Account/Opportunity(s)</description>
        <inlineHelpText>This is a tracking field to notate general at risk comments with the Account/Opportunity(s)</inlineHelpText>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_position_with_this_Prospect__c</fullName>
        <description>Field included in trigger to calculate Account Score</description>
        <label>Competitive position with this Prospect?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TriTech is Well Positioned</fullName>
                </value>
                <value>
                    <fullName>TriTech has Influenced RFP Specs</fullName>
                </value>
                <value>
                    <fullName>Level playing field</fullName>
                </value>
                <value>
                    <fullName>TriTech is in a Defensive Position</fullName>
                </value>
                <value>
                    <fullName>TriTech Will Be Locked Out</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Types__c</fullName>
        <description>Shows a consolidated list of the activate service contract types associated with this account</description>
        <label>Active Contract Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Company__c</fullName>
        <label>Core Company</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TriTech</fullName>
                </value>
                <value>
                    <fullName>Zuercher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Customer ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Success_Liaison__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Success Liaison</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Survey__c</fullName>
        <inlineHelpText>Marketing specific field for tracking customer survey times by customer</inlineHelpText>
        <label>xCustomer Survey</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fall</fullName>
                </value>
                <value>
                    <fullName>Spring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delete_Ken_Test_Child_Accounts__c</fullName>
        <label>Delete Ken Test Child Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DummyTouchField__c</fullName>
        <label>DummyTouchField</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_Customer_Number_WMP__c</fullName>
        <label>Customer Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_INET_Password__c</fullName>
        <label>EMS INET Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_System_Replacement_Year__c</fullName>
        <description>Associated to the survey, this is the estimated year the agency anticipates replacing their system</description>
        <inlineHelpText>Associated to the survey, this is the estimated year the agency anticipates replacing their system</inlineHelpText>
        <label>Estimated System Replacement Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsTsv9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Date_of_Purchase__c</fullName>
        <label>xExpected Date of Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FBR_BA_Email__c</fullName>
        <label>FBR BA Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FBR_Installed_Year__c</fullName>
        <label>FBR Installed Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBR_Vendor__c</fullName>
        <label>FBR Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911 EMS Software, LLC</fullName>
                </value>
                <value>
                    <fullName>911-Inc.</fullName>
                </value>
                <value>
                    <fullName>ACS-Firehouse</fullName>
                </value>
                <value>
                    <fullName>ADSI</fullName>
                </value>
                <value>
                    <fullName>AeroMed Software</fullName>
                </value>
                <value>
                    <fullName>Allegheny R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Alpine Software</fullName>
                </value>
                <value>
                    <fullName>AmbuPro</fullName>
                </value>
                <value>
                    <fullName>AMCAD</fullName>
                </value>
                <value>
                    <fullName>Application Data Systems Inc. (ADSi)</fullName>
                </value>
                <value>
                    <fullName>Archonix</fullName>
                </value>
                <value>
                    <fullName>Astra</fullName>
                </value>
                <value>
                    <fullName>Bighorn Systems</fullName>
                </value>
                <value>
                    <fullName>BIO-Key</fullName>
                </value>
                <value>
                    <fullName>Bradshaw Consulting</fullName>
                </value>
                <value>
                    <fullName>CallWorx</fullName>
                </value>
                <value>
                    <fullName>Cassidian</fullName>
                </value>
                <value>
                    <fullName>CIS Systems</fullName>
                </value>
                <value>
                    <fullName>Code 3 Software</fullName>
                </value>
                <value>
                    <fullName>Code Red</fullName>
                </value>
                <value>
                    <fullName>Cody</fullName>
                </value>
                <value>
                    <fullName>Commerx Corporation</fullName>
                </value>
                <value>
                    <fullName>ComnetiX</fullName>
                </value>
                <value>
                    <fullName>Computer Investment Advice, Inc.</fullName>
                </value>
                <value>
                    <fullName>CORE 911</fullName>
                </value>
                <value>
                    <fullName>Corporate Technologies, LLC</fullName>
                </value>
                <value>
                    <fullName>Crime Gog Technologies</fullName>
                </value>
                <value>
                    <fullName>CRIMES</fullName>
                </value>
                <value>
                    <fullName>CrimeStar</fullName>
                </value>
                <value>
                    <fullName>CR Management, Inc.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>